--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,4 +1,20 @@
 .header {
     background-color: rgb(37, 141, 225);
     color: white;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    .header__outter-block {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        p:last-child {
+            margin: 0 100px;
+        }
+    }
 }
