--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('./fonts/Roboto-Regular.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: content-box;
+    font-family: 'Roboto', Arial, sans-serif;
 }
