--- a/src/components/OthersChatsLeft/style.scss
+++ b/src/components/OthersChatsLeft/style.scss
@@ -1,9 +1,12 @@
+@use '/src/utils/SASS/variables' as *;
+
 .otherChatLeft {
-    background-color: white;
+    background-color: $primary-color-left-side;
     border-radius: 20px;
     border: none;
     width: 250px;
     height: 60px;
     padding: 10px;
     margin: 25px 0;
+    color: $primary-color-font;
 }
