--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,5 @@
 .header {
-    background-color: rgb(37, 141, 225);
+    background-color: #5e4646;
     color: white;
     padding: 10px;
     display: flex;
