--- a/src/components/LeftSideChats/style.scss
+++ b/src/components/LeftSideChats/style.scss
@@ -2,7 +2,7 @@
 
 .left-side {
     width: 300px;
-    height: 100vh;
+    height: max-content;
     background-color: $primary-color-background;
     padding: 25px 0 0 25px;
 }
