--- a/src/components/WriteMessage/style.scss
+++ b/src/components/WriteMessage/style.scss
@@ -1,11 +1,10 @@
 input[class='input-write-message'] {
-    font-size: 30px;
+    font-size: 20px;
     border-radius: 20px;
-    padding: 10px;
+    padding: 10px 20px;
     border: none;
-    padding: 10px;
     position: absolute;
-    bottom: 100px;
+    bottom: 120px;
     left: 50%;
     transform: translateX(-50%);
     background-color: #494949;
