--- a/src/components/RegistrationForm/style.scss
+++ b/src/components/RegistrationForm/style.scss
@@ -17,6 +17,11 @@
         }
     }
 
+    .form__title-form {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
     .form__form-auth {
         padding: 20px;
         border-radius: 20px;
@@ -53,7 +58,6 @@
             background-color: transparent;
             padding: 16px 24px;
             margin-bottom: 12px;
-
             &:hover {
                 cursor: pointer;
             }
