--- a/src/components/RegistrationForm/style.scss
+++ b/src/components/RegistrationForm/style.scss
@@ -3,19 +3,7 @@
 
 .form {
     @include flex-column-center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    p[class='form__little-description-form'] {
-        margin-top: 25px;
-
-        &:hover {
-            cursor: pointer;
-            text-decoration: underline;
-        }
-    }
+    @include form;
 
     .form__title-form {
         font-size: 24px;
