--- a/src/utils/SASS/_mixins.scss
+++ b/src/utils/SASS/_mixins.scss
@@ -4,3 +4,19 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    p[class='form__little-description-form'] {
+        margin-top: 25px;
+
+        &:hover {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+    }
+}
