--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -4,3 +4,4 @@ $primary-color-left-side: #292828;
 $primary-color-font: rgb(226, 226, 226);
 $primary-color-background-current-chats-in: #403f3f;
 $primary-color-background-current-chats-out: #5e4646;
+$border-red-color: rgb(166, 9, 9);
