--- a/src/components/ErrorConnectionBackend/style.scss
+++ b/src/components/ErrorConnectionBackend/style.scss
@@ -22,5 +22,7 @@
         font-size: 24px;
         color: $primary-color-font;
         margin-bottom: 20px;
+        letter-spacing: 2px;
+        line-height: 40px;
     }
 }
