--- a/src/components/RegistrationPage/style.scss
+++ b/src/components/RegistrationPage/style.scss
@@ -4,3 +4,36 @@ body {
     background-color: $primary-color-background;
     color: $primary-color-font;
 }
+
+.reg-page {
+    width: 100vw;
+    height: 100vh;
+
+    &.reg-page__dark {
+        opacity: 0.5;
+    }
+}
+
+.popup {
+    opacity: 1;
+    z-index: 20;
+
+    p {
+        letter-spacing: 2px;
+        line-height: 2;
+    }
+
+    button {
+        padding: 10px 24px;
+        font-size: 20px;
+        color: $primary-color-font;
+        background-color: transparent;
+        border: 3px solid $primary-color-font;
+        border-radius: 20px;
+
+        &:hover {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+    }
+}
