--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -1,4 +1,5 @@
 $primary-color-background: #212121;
+$primary-color-background-dark: #212121;
 $border-width: 3px;
 $primary-color-left-side: #292828;
 $primary-color-font: rgb(226, 226, 226);
