--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -7,3 +7,5 @@ $primary-color-background-current-chats-in: #403f3f;
 $primary-color-background-current-chats-out: #5e4646;
 $border-red-color: rgb(166, 9, 9);
 $width-input-search-users: 165px;
+
+$header-color: #5e4646;
