--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,7 +1,7 @@
 @use '/src/utils/SASS/variables' as *;
 
 .header {
-    background-color: #5e4646;
+    background-color: $header-color;
     color: white;
     padding: 10px 50px;
     display: flex;
