--- a/src/components/WriteMessage/style.scss
+++ b/src/components/WriteMessage/style.scss
@@ -7,11 +7,11 @@
     bottom: calc(0% + 150px);
     width: 100%;
 
-    textarea[class='input-write-message'] {
+    textarea.block-write-messages__textarea {
         font-size: 20px;
         border-radius: 20px;
         padding: 10px 20px;
-        border: none;
+        border: 3px solid transparent;
         background-color: #494949;
         color: white;
         width: 70%;
@@ -22,6 +22,10 @@
 
         &::-webkit-scrollbar {
             display: none;
+        }
+
+        &.error {
+            border: 3px solid $border-red-color;
         }
     }
 
