--- a/src/components/Messages/style.scss
+++ b/src/components/Messages/style.scss
@@ -15,3 +15,16 @@
         margin-left: auto;
     }
 }
+
+.iframe-messages {
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    max-height: 60vh;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
