--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -1,11 +1,11 @@
 $primary-color-background: #212121;
 $primary-color-background-dark: #191919;
 $border-width: 3px;
-$primary-color-left-side: #292828;
+$primary-color-left-side: #363b3b;
 $primary-color-font: rgb(226, 226, 226);
-$primary-color-background-current-chats-in: #403f3f;
-$primary-color-background-current-chats-out: #5e4646;
+$primary-color-background-current-chats-in: #3f4040;
+$primary-color-background-current-chats-out: #46565e;
 $border-red-color: rgb(166, 9, 9);
 $width-input-search-users: 165px;
 
-$header-color: #5e4646;
+$header-color: #4d6167;
