--- a/src/components/OthersChatsLeft/style.scss
+++ b/src/components/OthersChatsLeft/style.scss
@@ -1,6 +1,6 @@
 @use '/src/utils/SASS/variables' as *;
 
-.otherChatLeft {
+.other-chat-left {
     background-color: $primary-color-left-side;
     border-radius: 20px;
     border: none;
