--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -2,6 +2,7 @@ $primary-color-background: #212121;
 $primary-color-background-dark: #191919;
 $border-width: 3px;
 $primary-color-left-side: #363b3b;
+$primary-color-left-chats-border: #454b4b;
 $primary-color-font: rgb(226, 226, 226);
 $primary-color-background-current-chats-in: #3f4040;
 $primary-color-background-current-chats-out: #46565e;
