--- a/src/components/WriteMessage/style.scss
+++ b/src/components/WriteMessage/style.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 15px;
+    margin-top: auto;
 
     textarea.block-write-messages__textarea {
         font-size: 20px;
