--- a/src/components/OthersChatsLeft/style.scss
+++ b/src/components/OthersChatsLeft/style.scss
@@ -20,5 +20,6 @@ p[class='warning-empty-chats-text'] {
     font-size: 20px;
     color: $primary-color-font;
     position: absolute;
-    top: 49%;
+    top: 50%;
+    left: 5%;
 }
