--- a/src/components/AskChooseChat/style.scss
+++ b/src/components/AskChooseChat/style.scss
@@ -1,4 +1,4 @@
-p[class='ask-choose-chat-text'] {
+p.ask-choose-chat-text {
     color: white;
     font-size: 20px;
     position: absolute;
@@ -7,4 +7,11 @@ p[class='ask-choose-chat-text'] {
     transform: translate(-50%, -50%);
     letter-spacing: 1px;
     white-space: nowrap;
+}
+
+@media (max-width: 510px) {
+    p.ask-choose-chat-text {
+        white-space: wrap;
+        text-align: center;
+    }
 }
