--- a/src/components/BlockCurrentChat/style.scss
+++ b/src/components/BlockCurrentChat/style.scss
@@ -4,9 +4,20 @@
     width: 70%;
     margin: 25px 100px;
     height: calc(100vh - 140px);
-    position: relative;
     background-color: $primary-color-background;
     color: $primary-color-font;
     display: flex;
     flex-direction: column;
+}
+
+@media (max-width: 760px) {
+    .block-current-chat {
+        position: block;
+    }
+}
+
+@media (min-width: 760px) {
+    .block-current-chat {
+        position: relative;
+    }
 }
