--- a/src/components/OthersChatsLeft/style.scss
+++ b/src/components/OthersChatsLeft/style.scss
@@ -16,10 +16,16 @@
     }
 }
 
-p[class='warning-empty-chats-text'] {
+p.warning-empty-chats-text {
     font-size: 20px;
     color: $primary-color-font;
     position: absolute;
     top: 50%;
     left: 5%;
+}
+
+@media (max-width: 760px) {
+    p.warning-empty-chats-text {
+        display: none;
+    }
 }
