--- a/src/components/BlockCurrentChat/style.scss
+++ b/src/components/BlockCurrentChat/style.scss
@@ -2,7 +2,7 @@
 
 .block-current-chat {
     width: 70%;
-    margin: 25px 100px;
+    margin: 25px 100px 25px 10px;
     height: calc(100vh - 140px);
     background-color: $primary-color-background;
     color: $primary-color-font;
