--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -37,6 +37,7 @@
             z-index: 20;
             position: absolute;
             transform: translateX(-50%);
+            border-radius: 20px;
             p {
                 padding: 10px 0;
             }
