--- a/src/components/Messages/style.scss
+++ b/src/components/Messages/style.scss
@@ -2,7 +2,6 @@
 
 .message {
     margin: 25px 0;
-    width: 350px;
     padding: 20px;
     border-radius: 20px;
     border: none;
@@ -28,5 +27,11 @@
 
     &::-webkit-scrollbar {
         display: none;
+    }
+}
+
+@media (min-width: 580px) {
+    .message {
+        width: 350px;
     }
 }
