--- a/src/utils/SASS/_variables.scss
+++ b/src/utils/SASS/_variables.scss
@@ -6,7 +6,7 @@ $primary-color-left-chats-border: #454b4b;
 $primary-color-font: rgb(226, 226, 226);
 $primary-color-background-current-chats-in: #3f4040;
 $primary-color-background-current-chats-out: #46565e;
-$primary-color-background-mobile-menu: #3c4950;
+$primary-color-background-mobile-menu: rgb(64, 80, 90);
 $border-red-color: rgb(166, 9, 9);
 $width-input-search-users: 165px;
 
