--- a/src/components/Messages/style.scss
+++ b/src/components/Messages/style.scss
@@ -24,7 +24,7 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
     max-height: 60vh;
-
+    margin-bottom: 20px;
     &::-webkit-scrollbar {
         display: none;
     }
