--- a/src/components/ErrorConnectionBackend/style.scss
+++ b/src/components/ErrorConnectionBackend/style.scss
@@ -1,10 +1,11 @@
 @use '/src/utils/SASS/mixins' as *;
 @use '/src/utils/SASS/variables' as *;
+
 .form {
     @include form-center-absolute;
     text-align: center;
 
-    button[class='form__continue-retry'] {
+    button.form__continue-retry {
         padding: 15px;
         border-radius: 20px;
         border: 3px solid $primary-color-font;
@@ -18,7 +19,7 @@
         }
     }
 
-    p[class='form__description-sorry-connection'] {
+    p.form__description-sorry-connection {
         font-size: 24px;
         color: $primary-color-font;
         margin-bottom: 20px;
