--- a/src/utils/SASS/_mixins.scss
+++ b/src/utils/SASS/_mixins.scss
@@ -11,7 +11,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    p[class='form__little-description-form'] {
+    p.form__little-description-form {
         margin-top: 25px;
 
         &:hover {
